# n8d

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.js  package-lock.json  package.json
public/: index.html
public/art/: index.html
public/art/htmthel/: index.html
public/experiments/: index.html  list.json
public/experiments/APPhysics2/: index.html
public/experiments/PromiseTests/: index.html
public/experiments/SASParser/: SASParser.js  SWFTools.js  index.html  package.json  resources-list.json  rollup.config.js
public/experiments/TTT/: index.html  package.json  table.TTT  table_first.TTT  table_minimax_v1.TTT
public/experiments/TTT/v2/tttjs/: Cargo.toml  build-release-es6.bat  build-release.bat  build.bat
public/experiments/TTT/v2/tttjs/dist-es6/: tttjs.js  tttjs_bg.wasm
public/experiments/TTT/v2/tttjs/src/: lib.rs
public/experiments/als/: index.html  readme.md  world.js  worldGl.js
public/experiments/asciify/: index.html
public/experiments/boyce-ball/: BoyceBall.js  Chill beat.m4a  index.html  rollup.config.js  test.html
public/experiments/boyce-block/: background.js  main.js  manifest.json  popup.html
public/experiments/chip8/: index.html
public/experiments/code-finder/: CodeFinder.js  New Text Document.txt  index.html  quizizz-codefinder.js  quizzizz-code-finder.js  rollup.config.js
public/experiments/dogeprice/: bitpay.js  coindesk.js  index.html  shapeshift.js
public/experiments/fakeCPU/: index.html
public/experiments/fibVisual/: index.html
public/experiments/graveyard/: index.html
public/tags/: navbar.tag
(+250 files in other folders)
